Improve Font Code